添加sgd完整训练集模型

--- a/ai/handwritten digits.ipynb
+++ b/ai/handwritten digits.ipynb
@@ -523,7 +523,7 @@
    "cell_type": "code",
    "execution_count": 224,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1467,6 +1467,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 784)\n",
+      "(60000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SGDClassifier(random_state=42)"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import SGDClassifier\n",
+    "\n",
+    "sgd_clf = SGDClassifier(max_iter=1000, tol=1e-3, random_state=42)\n",
+    "sgd_clf.fit(X_train, y_train)\n",
+    "# 2min训练完了---60000个训练集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(svm_clf,\"svm_model_all_training.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
@@ -1557,17 +1609,12 @@
     "    elif (28-y2)<y1:\n",
     "        img[:,-2+28-y2-y1:]=0\n",
     "    return img[y1:y2, x1:x2]\n",
-    "        \n",
+    "\n",
     "\n",
     "# 居中图片,添加填充\n",
     "def pad_image(img, pad_t, pad_r, pad_b, pad_l):\n",
     "    \"\"\"Add padding of zeroes to an image.\n",
     "    Add padding to an array image.\n",
-    "    :param img:\n",
-    "    :param pad_t:\n",
-    "    :param pad_r:\n",
-    "    :param pad_b:\n",
-    "    :param pad_l:\n",
     "    \"\"\"\n",
     "    height, width = img.shape\n",
     "    print(img.shape)\n",
@@ -1591,9 +1638,7 @@
     "    return img\n",
     "\n",
     "def center_image(img):\n",
-    "    \"\"\"Return a centered image.\n",
-    "    :param img:\n",
-    "    \"\"\"\n",
+    "    \n",
     "    # 边缘处理，上下左右两行归0\n",
     "    img[:2]=0\n",
     "    img[-2:]=0\n",
@@ -1605,35 +1650,21 @@
     "    y1, y2 = row_sum[0][0], row_sum[0][-1]\n",
     "    x1, x2 = col_sum[0][0], col_sum[0][-1]\n",
     "    print(x1,x2,y1,y2)\n",
-    "#     整齐化，上下|左右空的行相同\n",
-    "    \n",
-    "\n",
-    "#     cropped_image = img[y1:y2, x1:x2]\n",
+    "    # 整齐化，上下|左右空的行相同\n",
     "    cropped_image = tobesame(img,x1,x2,y1,y2)\n",
     "    print(cropped_image.shape)\n",
-    "#     print(images[0].shape[0])\n",
-    "#     print(images[0].shape[1])\n",
-    "#     zero_axis_fill = (images[0].shape[0] - cropped_image.shape[0])\n",
-    "#     one_axis_fill = (images[0].shape[1] - cropped_image.shape[1])\n",
+    "\n",
     "    zero_axis_fill = (28 - cropped_image.shape[0])\n",
     "    one_axis_fill = (28 - cropped_image.shape[1])\n",
-    "#     top = zero_axis_fill / 2 if zero_axis_fill%2==0 else (zero_axis_fill+1)/2\n",
-    "#     bottom = top\n",
-    "#     left = one_axis_fill/2 if one_axis_fill%2==0 else (one_axis_fill+1)/2\n",
-    "#     right = left\n",
+    "\n",
     "    top = zero_axis_fill / 2 \n",
     "    bottom = zero_axis_fill - top\n",
     "    left = one_axis_fill / 2\n",
     "    right = one_axis_fill - left\n",
-    "#     print(top,bottom,left,right)\n",
-    "\n",
+    "    # print(top,bottom,left,right)\n",
+    "    \n",
     "    padded_image = pad_image(cropped_image, top, left, bottom, right)\n",
-    "\n",
-    "    return padded_image\n",
-    "\n",
-    "# Usage is in a for loop that iterates through 60.000 images.\n",
-    "# for item in permuList:\n",
-    "#         shuImages.append(center_image(images[item]).reshape((28 * 28)))"
+    "    return padded_image"
    ]
   },
   {
