--- a/ai/SGDClassifier.ipynb
+++ b/ai/SGDClassifier.ipynb
@@ -256,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -355,7 +357,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -729,7 +733,7 @@
    "cell_type": "code",
    "execution_count": 110,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
